# uvllang

./: .gitignore  README.md  build_package.py  generate_parsers.py  pyproject.toml
grammars/: uvl.lark  uvl_lexer.g4  uvl_parser.g4  uvl_python_lexer.g4  uvl_python_parser.g4
tests/: test_arithmetic.py  test_lark_parser.py  test_uvl_parser.py  test_uvllang.py
uvllang/: __init__.py  cli.py  main.py  uvl_lark_lexer.py  uvl_lark_parser.py
