[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uvllang"
version = "0.2.1"
description = "Parser for the Universal Variability Language (UVL) with conversion support to CNF/SMT"
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [
    {name = "h3ssto", email = "tobias.hess@variability.dev"},
    {name = "UVL Team", email = "jagalindo@us.es"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.0"
dependencies = [
    "lark>=1.1.0",
    "sympy>=1.12",
    "python-sat>=0.1.8.dev13",
]

[project.optional-dependencies]
antlr = [
    "antlr4-python3-runtime==4.13.1",
]
dev = [
    "pytest>=7.0",
    "z3-solver>=4.12.0",
]

[project.scripts]
uvl2cnf = "uvllang.cli:uvl2cnf"
uvl2smt = "uvllang.cli:uvl2smt"

[tool.setuptools.packages.find]
where = ["."]
include = ["uvllang*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
uvllang = ["../grammars/uvl.lark"]

[tool.setuptools]
py-modules = []